# sdr-modem

./: .cproject  .env  .gitignore  .project  .travis.yml  CMakeLists.txt  Jenkinsfile  README.md  api.proto  build_and_deploy.sh  build_from_container.sh  configure_agent.sh  configure_flags.sh  sonar-project.properties
.github/workflows/: bullseye.yml  cmake.yml
debian/: changelog  control  copyright  postinst  prerm  rules
docker/: bionic.Dockerfile  bookworm.Dockerfile  build_all.sh  bullseye.Dockerfile  buster.Dockerfile  focal.Dockerfile  jammy.Dockerfile  stretch.Dockerfile  trixie.Dockerfile
src/: api.h  api.pb-c.c  api.pb-c.h  api_utils.c  api_utils.h  config.c  config.h  core.c  core.h  dsp_worker.c  dsp_worker.h  linked_list.c  linked_list.h  main.c  queue.c  queue.h  sdr_worker.c  sdr_worker.h  server_config.c  server_config.h  tcp_server.c  tcp_server.h  tcp_utils.c  tcp_utils.h
src/dsp/: clock_recovery_mm.c  clock_recovery_mm.h  dc_blocker.c  dc_blocker.h  doppler.c  doppler.h  fir_filter.c  fir_filter.h  frequency_modulator.c  frequency_modulator.h  fsk_demod.c  fsk_demod.h  gaussian_taps.c  gaussian_taps.h  gfsk_mod.c  gfsk_mod.h  interp_fir_filter.c  interp_fir_filter.h  lpf.c  lpf.h  lpf_complex.c  lpf_complex.h  lpf_taps.c  lpf_taps.h  mmse_fir_interpolator.c  mmse_fir_interpolator.h  quadrature_demod.c  quadrature_demod.h  sig_source.c  sig_source.h
src/math/: fast_atan2f.c  fast_atan2f.h
src/resources/: config.conf  sdr-modem.service
src/sdr/: file_source.c  file_source.h  iio_lib.c  iio_lib.h  iio_plugin.c  iio_plugin.h  plutosdr.c  plutosdr.h  sdr_device.h  sdr_server_api.h  sdr_server_client.c  sdr_server_client.h
src/sgpsdp/: sgp4sdp4.c  sgp4sdp4.h  sgp_in.c  sgp_time.c
test/: iio_lib_mock.c  iio_lib_mock.h  perf_fsk_modem.c  perf_sdr_modem.c  sdr_modem_client.c  sdr_modem_client.h  sdr_server_mock.c  sdr_server_mock.h  test_clock_recovery_mm.c  test_dc_blocker.c  test_doppler.c  test_dsp_worker.c  test_file_source.c  test_frequency_modulator.c  test_fsk_demod.c  test_gaussian_taps.c  test_gfsk_mod.c  test_iio_plugin.c  test_interp_fir_filter.c  test_linked_list.c  test_lpf.c  test_lpf_taps.c  test_mmse_fir_interpolator.c  test_plutosdr.c  test_quadrature_demod.c  test_queue.c  test_server_config.c  test_sgp4_001.c  test_sgp4_002.c  test_sig_source.c  test_tcp_server.c  utils.c  utils.h
test/resources/: full.conf  inputnan.cf32  invalid.format.conf  invalid.rx_sdr_type.conf  invalid.timeout.conf  invalid.tx_sdr_type.conf  lucky7.cf32  lucky7.expected.47000.cf32  lucky7.expected.cf32  lucky7.expected.nodc.s8  lucky7.expected.s8  minimal.conf  nusat.cf32  pluto_enabled.conf  processed.s8  run_tests.sh
